# happ

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  mix.exs
.docker/: postgres.sh
apps/: CMakeLists.txt
apps/abacus/: CMakeLists.txt  evaluator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/calculator/: Cargo.toml
apps/calculator/src/: main.rs
apps/coriander/: .gitignore
apps/coriander/coriander/: AppDelegate.swift  ContentView.swift  ContentView.swift.old  CorianderApp.swift  CorianderAppDelegate.swift  CorianderSceneDelegate.swift  Info.plist  KeychainItem.swift  LaunchScreen.storyboard  LogInViewController.swift  SceneDelegate.swift  SignInWithAppleDelegates.swift  coriander.entitlements  corianderApp.swift  corianderAppDelegate.swift
apps/coriander/coriander WatchKit App/: Info.plist
apps/coriander/coriander WatchKit AppTests/: coriander_WatchKit_AppTests.swift
apps/coriander/coriander WatchKit AppUITests/: coriander_WatchKit_AppUITests.swift
apps/coriander/coriander WatchKit Extension/: ComplicationController.swift  ContentView.swift  Info.plist  NotificationController.swift  NotificationView.swift  corianderApp.swift
apps/coriander/coriander.xcodeproj/: project.pbxproj
apps/coriander/corianderTests/: corianderTests.swift
apps/coriander/corianderUITests/: corianderUITests.swift
apps/joes/joes/: ContentView.swift  DataView.swift  Info.plist  MapView.swift  joesApp.swift
apps/joes/joes WatchKit App/: Info.plist
apps/joes/joes WatchKit AppTests/: joes_WatchKit_AppTests.swift
apps/joes/joes WatchKit AppUITests/: joes_WatchKit_AppUITests.swift
apps/joes/joes WatchKit Extension/: ComplicationController.swift  ContentView.swift  Info.plist  NotificationController.swift  NotificationView.swift  joesApp.swift
apps/joes/joes.xcodeproj/: project.pbxproj
apps/joes/joesTests/: joesTests.swift
apps/joes/joesUITests/: joesUITests.swift
assets/: package-lock.json  package.json  tsconfig.json  webpack.config.js
assets/css/: legacy.scss  spa.scss
assets/js/: app.js  hello.ts  hello.tsx
assets/js/apps/: Spa.tsx  legacy.tsx  spa.tsx
assets/js/components/: Demo.tsx  Fiber.tsx  Greater.tsx  LeafletMap.tsx  Map.tsx  ThreeJs.tsx  demo.tsx
assets/js/containers/: App.tsx  Header.tsx  Layout.tsx
assets/wasm/: Cargo.toml  LICENSE_MIT
assets/wasm/src/: lib.rs
config/: config.exs  dev.exs  prod.exs  test.exs
examples/: CMakeLists.txt
examples/happ-cpp/: CMakeLists.txt  Doxyfile
examples/happ-cpp/apps/: CMakeLists.txt
examples/happ-cpp/demos/: CMakeLists.txt
examples/happ-cpp/demos/fluid/: CMakeLists.txt
examples/happ-elixir/: .env  .gitignore  .gitlab-ci.yml  Makefile  credo.sh  dialyzer.sh  distillery.sh  mix.exs
examples/happ-elixir/assets/: webpack.config.js
examples/happ-elixir/config/: dev.exs  test.exs
examples/happ-elixir/lib/: happ.ex  happ_web.ex
examples/happ-haskell/: README.md  happ.cabal
examples/happ-haskell/src/: Cards.hs  Misc.hs  Safe.hs
examples/happ-haskell/test/: CardsTests.hs  Spec.hs
examples/happ-node/: index.js  package.json
examples/happ-node/nan/: package.json
examples/happ-node/napi/: package.json
examples/happ-node/node-addon-api/: binding.gyp  index.js
examples/happ-prolog/family-tree/: family-tree.pl
examples/happ-prolog/hello-world/: hello-world.pl
examples/happ-rust/: CMakeLists.txt  Makefile
examples/happ-rust/hello-world/: Cargo.toml
examples/happ-swift/: Makefile  Package.swift
examples/happ-swift/Tests/: LinuxMain.swift
examples/interop/interop-prolog/: between.c  digits.pl
happ-cpp/: .gitignore  CMakeLists.txt  Makefile  README.md
happ-cpp/app/hello-world/: main.cpp
happ-cpp/apps/: CMakeLists.txt
happ-cpp/apps/hello-world/: CMakeLists.txt
happ-cpp/apps/hello-world/src/: main.cpp  main_test.cpp
happ-cpp/demos/: CMakeLists.txt
happ-cpp/lib/: CMakeLists.txt  lib.cpp
happ-cpp/lib/src/: lib.cpp
happ-elixir/: .dockerignore  .env.sh  .gitlab-ci.yml  Dockerfile  Makefile
happ-elixir/assets/: package.json
happ-elixir/assets/css/: spa.scss
happ-elixir/config/: prod.secret.exs
happ-elixir/lib/happ/: repo.ex
happ-elixir/native-c/: CMakeLists.txt
happ-elixir/native-c/cmake/: FindErlang.cmake
happ-elixir/test/support/: channel_case.ex  data_case.ex
happ-haskell/: ChangeLog.md  Makefile  happ.cabal  package.yaml  stack.yaml
happ-haskell/src/: FFI.hs  Lib.hs
happ-haskell/src-cpp/haskell-ffi/: Makefile
happ-haskell/test/: BasicTests.hs  MiscTests.hs
happ-haskell/test/Math/: CoreTests.hs
happ-node/: .gitignore  Makefile  README.md  package.json  test.sh
happ-node/nan/: addon.cc  addon.js  binding.gyp  package.json
happ-node/nan/src/: addon.js
happ-node/nan/src-cpp/: addon.cc
happ-node/napi/: addon.c  addon.js  binding.gyp  package.json
happ-node/napi/src/: addon.js
happ-node/napi/src-c/: addon.c
happ-node/node-addon-api/: addon.cc  addon.js  package.json
happ-node/node-addon-api/src/: addon.js
happ-node/node-addon-api/src-cpp/: addon.cc
happ-prolog/: Makefile  main.pl
happ-rust/: Makefile
happ-swift/: Makefile  Package.swift  README.md
happ-swift/Sources/Core/: Greeter.swift
happ-swift/Sources/HelloWorld/: main.swift
happ-swift/Tests/HelloWorldTests/: HelloWorldTests.swift
happ-swift/Tests/happ-swiftTests/: XCTestManifests.swift  (+1 more)
interop/interop-prolog/: Makefile  consult.c
lib/happ/: application.ex  dynamic_supervisor.ex  helper.ex  native.ex
lib/happ_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/schema/: kv_json_store.ex  kv_store.ex
native-c/: CMakeLists.txt
native-haskell/: happ.cabal  package.yaml  stack.yaml
native-haskell/src/: Basic.hs  Lib.hs  Math.hs
native-haskell/test/: BasicTests.hs  CardsTests.hs  MathTests.hs  MiscTests.hs  Spec.hs
native-rust/happ_native/: Cargo.toml
native-rust/happ_native/src/: lib.rs
native/happ_native/: Cargo.toml  README.md
priv/repo/: seeds.exs
rel/: config.exs
test/: test_helper.exs
test/support/: conn_case.ex
(+210 files in other folders)
