[package]
name = "calculator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]
curses = ["easycurses", "pancurses"]

[dependencies]
bitflags = "1.0"
cassowary = "0.3"
# meval = "0.2.0"
meval = { git = "https://github.com/korczis/meval-rs.git", version = "0.2" }
rand = "0.8"
regex = "1.5.4"
unicode-segmentation = "1.2"
unicode-width = "0.1"

tui = "0.15.0"
termion = { version = "1.5", optional = true }
rustbox = { version = "0.11", optional = true }
crossterm = { version = "0.19", optional = true }
easycurses = { version = "0.12.2", optional = true }
pancurses = { version = "0.16.1", optional = true, features = ["win32a"] }
serde = { version = "1", "optional" = true, features = ["derive"]}

[[bin]]
name = "calculator"
path = "src/main.rs"
required-features = ["termion"]