[package]
name = "happ_native"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "happ_native"
path = "src/lib.rs"
crate-type = ["dylib"]

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "happ"
test = false
bench = false
path = "src/main.rs"

[dependencies]
bufstream = "0.1.4"
rustler = { git = "https://github.com/rusterlium/rustler" }
lazy_static = "1.0"
opencl3 = "0.2.0"